--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "path": "^0.12.7",
-    "uuid": "^7.0.3"
+    "uuid": "^7.0.3",
+    "uuidv1": "^1.6.14"
   },
   "devDependencies": {
     "eslint": "^7.0.0"
